Raw orgchart view complete

--- a/RarecrewOrgchartAssignment/Views/Home/About.cshtml
+++ b/RarecrewOrgchartAssignment/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>My learning right now includes MVC and google orgcharts. Later I plan to dig into jquery and CSS.</p>
+<p>My goal in this app are better understanding of MVC, google orgcharts, jquery and CSS.</p>
