Working jQuery color changes on organization chart

--- a/RarecrewOrgchartAssignment/Views/Home/Index.cshtml
+++ b/RarecrewOrgchartAssignment/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-    @{
+﻿@{
     ViewBag.Title = "Home Page";
     }
 
@@ -19,7 +18,7 @@
             data.addRows([
               [{ v: 'Luciano Pavarotti', f: 'Luciano Pavarotti<div style="color:red; font-style:italic">CEO</div>' },
                '', 'Was Caruso better?'],
-              [{ v: 'Placido Domingo', f: 'Placido Domingo<div style="color:red; font-style:italic">Project Manager</div>' },
+                [{ v: 'Placido Domingo', f: 'Placido Domingo<div style="color:red; font-style:italic">Project Manager</div>' },
                'Luciano Pavarotti', 'Tenor or baritone?'],
               [{ v: 'Jose Carreras', f: 'Jose Carreras<div style="color:red; font-style:italic">Project manager</div>' },
                'Luciano Pavarotti', 'Real fighter'],
@@ -31,47 +30,60 @@
               ['Tom', 'Jose Carreras', ''],
               ['Eve', 'Jose Carreras', ''],
               ['Rose', 'Jose Carreras', '']
-            ]);            
+            ]);
 
             // Create the chart
             var chart = new google.visualization.OrgChart(document.getElementById('chart_div'));
-            
 
-            // Handling of events
+
+            // Handling of select event
             function selectHandler() {
 
-                console.log(chart);
-                var selectedItem = chart.getSelection();
-                console.log(selectedItem);                
+                // Clears previous style changes
+                $('.google-visualization-orgchart-node').each(function () {
+                    $(this).removeAttr('style');
+                });
 
-                console.log(selectedItem[0].column);
+                // Changes style of clicked element
+                $('.google-visualization-orgchart-node').click(function () {
 
-                if (selectedItem) {
-                   
-                    $('.google-visualization-orgchart-node').each(function () {
-                        $(this).removeAttr('style');
-                    });
+                    // Change color of selected note
+                    $(this).css('background-color', '#00FF66');
 
-                    $('.google-visualization-orgchart-node').click(function () {
-                        $(this).css('background-color','red');
-                        $(this)[0].parentElement.css('background-color','red');
-                    });
+                    // Chage color of parent node
+                    var clickedNodeHTML = $(this).html();
+                    if (clickedNodeHTML === 'Bob' ||
+                        clickedNodeHTML === 'Joe' ||
+                        clickedNodeHTML === 'Sue' ||
+                        clickedNodeHTML === 'Jane') {
+                        $('.google-visualization-orgchart-node:contains(Placido Domingo)').css('background-color', '#00FF66');
+                    }
+                    else if (clickedNodeHTML === 'Tim' ||
+                        clickedNodeHTML === 'Tom' ||
+                        clickedNodeHTML === 'Eve' ||
+                        clickedNodeHTML === 'Rose') {
+                        $('.google-visualization-orgchart-node:contains(Jose Carreras)').css('background-color', '#00FF66');
+                    }
 
-                    console.log("quack");
-                }
+                    // Allways highlight CEO 
+                    $('.google-visualization-orgchart-node:contains(Luciano Pavarotti)').css('background-color', '#00FF66');
 
+                    // Maintenance note: This whole solution (choosing what to highlight based on innerHTML) is just a workaround, 
+                    // caused by missing features in Google chart tools, mostly inability to effectively work with parent nodes
+                    // or to choose columns in the table (they are allways null)
+                });
             }
 
-            // event trigger for selecting node
+            // Event trigger for selecting node
             google.visualization.events.addListener(chart, 'select', selectHandler);
 
             // Draw the chart, setting the allowHtml option to true for the tooltips.
-              chart.draw(data, { allowHtml: true });
-            
+            chart.draw(data, { allowHtml: true });
+
         }
-    </script>   
+    </script>
 </head>
-<body>    
-    <h2 style="text-align:center">Basic Organisation Chart</h2> 
+<body>
+    <h2 style="text-align: center">Basic Organisation Chart</h2>
     <div id="chart_div"></div>
 </body>
